[package]
name = "n3xb-bdk-derisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.27.1", default-features = true, features = ["all-keys"] }
base64 = { version = "0.21.0" }
tokio = { version = "1", features = ["full"] }
